Fix for issue 284 and Issue 250 - removed batching from bulk taxon group updates and changed a bit of css that was causing the advanced review screen to overflow it's container.

--- a/src/main/css/bdrs/bdrs.css
+++ b/src/main/css/bdrs/bdrs.css
@@ -1368,15 +1368,15 @@ div.alaSightingsTableHeaderDoubleLineArrows {
 	margin-top: 10px;
 }
 
-.alaSightingsTable .sighting {
+.alaSightingsTable tr {
     border-bottom: 1px solid #D9D9D9;
     padding: 0.5em 0em 0.5em 0em; 
 }
 
-.alaSightingsTable .sighting .recordType,
-.alaSightingsTable .sighting .scientificName,
-.alaSightingsTable .sighting .commonName {
-    font-weight: bold;
+.alaSightingsTable .recordType,
+.alaSightingsTable .scientificName,
+.alaSightingsTable .commonName {
+    white-space: inherit;
 }
 
 .alaSightingsTableViewContent,
